--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "git-commit-msg-linter": "^2.4.4"
   }
 }
