--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "git-commit-msg-linter": "^2.4.4"
+    "@types/node": "^14.0.27",
+    "git-commit-msg-linter": "^2.4.4",
+    "typescript": "^3.9.7"
   }
 }
