--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,7 @@
   },
   "extends": [
     "standard-with-typescript",
-    "plugin:react/recommended",
-    ""
+    "plugin:react/recommended"
   ],
   "plugins": [
     "react"
