--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,6 @@
   "rules": {
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
-    "@typescript-eslint/camelcase": "off",
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "@typescript-eslint/camelcase": "off"
   }
 }
