--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "main": "index.js",
   "keywords": [],
   "scripts": {
-    "test": "jest"
+    "test": "jest --passWithNoTests",
+    "test:watch": "npm test -- --watch",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage"
   },
   "devDependencies": {
     "@types/jest": "^26.0.7",
