--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:ci": "npm test -- --coverage"
   },
   "devDependencies": {
+    "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.7",
     "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
@@ -22,6 +23,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "faker": "^4.1.0",
     "git-commit-msg-linter": "^2.4.4",
     "husky": "^4.2.5",
     "jest": "^26.2.1",
