--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:ci": "npm test -- --coverage"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.7",
     "@types/node": "^14.0.27",
@@ -30,5 +31,8 @@
     "lint-staged": "^10.2.11",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "axios": "^0.19.2"
   }
 }
