chore: add react configs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,11 @@
     }
   },
   "extends": [
-    "standard-with-typescript"
+    "standard-with-typescript",
+    "plugin:react/recommended"
+  ],
+  "plugins": [
+    "react"
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
@@ -13,6 +17,8 @@
   "rules": {
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
-    "@typescript-eslint/camelcase": "off"
+    "@typescript-eslint/camelcase": "off",
+    "react/jsx-uses-react": "error",
+    "react/jsx-uses-vars": "error"
   }
 }
