--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.7",
     "@types/node": "^14.0.27",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "eslint": "^7.5.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
@@ -33,6 +35,8 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
