chore: config webpack

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "index.js",
   "keywords": [],
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "start": "webpack-dev-server --open",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
@@ -20,11 +21,13 @@
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.5.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^4.1.0",
     "git-commit-msg-linter": "^2.4.4",
