--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^4.2.0",
     "eslint": "^7.5.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
     "eslint-plugin-import": "^2.22.0",
@@ -32,9 +33,14 @@
     "faker": "^4.1.0",
     "git-commit-msg-linter": "^2.4.4",
     "husky": "^4.2.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.2.1",
     "lint-staged": "^10.2.11",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
     "ts-jest": "^26.1.4",
+    "ts-loader": "^8.0.2",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
