--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.0",
@@ -49,6 +50,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   }
 }
