--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.2.1",
+    "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^10.2.11",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.2",
