refactor: update eslint-standard-with-typescript version

--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage"
+    "test:ci": "npm test -- --coverage",
+    "check": "npm-check -u -s"
   },
   "devDependencies": {
     "@testing-library/react": "^10.4.7",
     "@types/axios": "^0.14.0",
     "@types/faker": "^4.1.12",
-    "@types/jest": "^26.0.7",
+    "@types/jest": "^26.0.8",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.0",
-    "eslint": "^7.5.0",
-    "eslint-config-standard-with-typescript": "^11.0.1",
+    "eslint": "^7.6.0",
+    "eslint-config-standard-with-typescript": "^18.0.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -36,7 +37,7 @@
     "git-commit-msg-linter": "^2.4.4",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.2.1",
+    "jest": "^26.2.2",
     "jest-localstorage-mock": "^2.4.3",
     "lint-staged": "^10.2.11",
     "node-sass": "^4.14.1",
