--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,10 @@
   "rules": {
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/comma-spacing": "off",    
     "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/return-await": "off",
+    "@typescript-eslint/method-signature-style": "off",
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error"
   }
