--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "check": "npm-check -u -s"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.7",
     "@types/axios": "^0.14.0",
     "@types/faker": "^4.1.12",
