--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "keywords": [],
   "scripts": {
     "start": "webpack-dev-server --open",
-    "test": "jest --passWithNoTests --no-cache --runInBand",
+    "test": "cross-env NODE_ICU_DATA=node_modules/full-icu jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage",
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^4.2.0",
     "eslint": "^7.6.0",
     "eslint-config-standard-with-typescript": "^18.0.2",
@@ -37,6 +38,7 @@
     "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^4.1.0",
+    "full-icu": "^1.3.1",
     "git-commit-msg-linter": "^2.4.4",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
