--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,9 @@
     "@typescript-eslint/return-await": "off",
     "@typescript-eslint/method-signature-style": "off",
     "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/no-namespace": "off",
+    "import/export": "off",
+    "no-redeclare": "off",
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error"
   }
