--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 script:
   - eslint 'src/**'
   - npm run test:coveralls
-build:
+deploy:
   provider: Heroku,
   api_key: $HEROKU_API
   app: barbecue-front
