--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "webpack-merge": "^5.1.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.25",
+    "@fortawesome/free-solid-svg-icons": "5.11.2",
+    "@fortawesome/react-fontawesome": "0.1.4",
     "axios": "^0.19.2",
     "express": "^4.17.1",
     "express-history-api-fallback": "^2.2.1",
